New features trusted modules. Modules with only token authentication.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+
+@if(error){
+  {{error}}
+} @else {
+  <ion-app>
+    <ion-router-outlet></ion-router-outlet>
+  </ion-app>
+}
