Fix icon color for sending mail. Select all classed for a new PTM.

--- a/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
+++ b/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
@@ -46,7 +46,7 @@
                     <ion-icon slot="icon-only" color="success" name="add-circle"></ion-icon>
                 </ion-button>
                 <ion-button (click)="sendMails()" fill="solid" [disabled]="!isUpcomming" matTooltip="{{'Send mail to the parents'|translate}}">
-                    <ion-icon slot="icon-only" color="primary" name="mail-outline"></ion-icon>
+                    <ion-icon slot="icon-only" name="mail-outline"></ion-icon>
                 </ion-button>
                 <ion-button (click)="registerRoom()" fill="solid" [disabled]="!isUpcomming" matTooltip="{{'Register room for teachers'|translate}}">
                     <ion-icon slot="icon-only" color="secondary" name="room"></ion-icon>
