Implementing student view of the PTM events.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
-@if(error){
-  {{error}}
+@if(authService.error){
+  {{authService.error}}
 } @else {
   <ion-app>
     <ion-router-outlet></ion-router-outlet>
