--- a/src/app/trusted/register-ptm/register-ptm.component.html
+++ b/src/app/trusted/register-ptm/register-ptm.component.html
@@ -1,9 +1,18 @@
+@if(selectedPTM){
 <ion-header>
     <ion-toolbar class="page-toolbar">
         <ion-title>{{'Event Registrations'|translate}} {{selectedPTM.start|date:'yyyy-MM-dd'}}
-            {{selectedPTM.start|date:'HH:mm'}} - {{selectedPTM.end|date:'HH:mm'}}</ion-title>
+            {{selectedPTM.start|date:'HH:mm'}} - {{selectedPTM.end|date:'HH:mm'}}
+            {{'student'|translate}}: {{student.surName}}, {{student.givenName}}
+        </ion-title>
+        <ion-buttons slot="end">
+            <ion-button matTooltip="{{'Create list of appoitments'|translate}}">
+                <ion-icon name="list" color=""></ion-icon>
+            </ion-button>
+        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 <ion-content>
     <cranix-ptm-view [id]="id"></cranix-ptm-view>
 </ion-content>
+}
