--- a/src/app/shared/cranix-ptm-view/cranix-ptm-view.component.html
+++ b/src/app/shared/cranix-ptm-view/cranix-ptm-view.component.html
@@ -1,5 +1,38 @@
 @if(rowData) {
-<ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="teacherFilter"></ion-input>
+<ion-item>
+    <ion-input placeholder="{{'Search for' | translate }} {{'Teacher'|translate}}" (input)="onQuickFilterChanged()" id="teacherFilter"></ion-input>
+    @if(selectedStudent){
+        <ion-button (click)="printEventForStudent()">
+            <ion-icon color="success" name="print"></ion-icon>
+        </ion-button>
+    }
+    @if(isPtmManager){
+    <!-- ion-label style="min-width: 300;">{{'Select student for the event'|translate}}</ion-label -->
+    <ionic-selectable #selectStudent itemValueField="id" itemTextField="fullName" [isMultiple]="false"
+        [(ngModel)]="selectedStudent" [ngModelOptions]="{standalone: true}" [items]="students" [canSearch]="true"
+        (onChange)="readData(false)"
+        style="min-width: 300;">
+        <ng-template ionicSelectablePlaceholderTemplate>{{ "Select student for the event" | translate }}</ng-template>
+        <ng-template ionicSelectableHeaderTemplate>
+            <ion-header>
+                <ion-toolbar color="primary">
+                    <ion-title>
+                        {{ "Select student for the event" | translate }}
+                    </ion-title>
+                    <ion-buttons slot="end">
+                        <ion-button (click)="deselectStudent(selectStudent)" matTooltip="{{'Deselect student'}}">
+                            <ion-icon color="success" name="trash"></ion-icon>
+                        </ion-button>
+                        <ion-button ion-button (click)="selectStudent.close()">
+                            <ion-icon color="danger" name="close"></ion-icon>
+                        </ion-button>
+                    </ion-buttons>
+                </ion-toolbar>
+            </ion-header>
+        </ng-template>
+    </ionic-selectable>
+    }
+</ion-item>
 <ag-grid-angular style="width: 100%; height: 90%;" class="{{authService.settings.agGridThema}}"
     [rowHeight]="authService.settings.rowHeight" [rowData]="rowData" [columnDefs]="columnDefs"
     [defaultColDef]="defaultColDef" [context]="context" (gridReady)="onGridReady($event)" id="agGridTable">
@@ -42,7 +75,7 @@
                 </ion-item>
                 <ion-item>
                     <ion-label>{{'Select student for the event'|translate}}</ion-label>
-                    <ionic-selectable #selectStudent itemValueField="id" itemTextField="fullName" [isMultiple]="false"
+                    <ionic-selectable #selectEventStudent itemValueField="id" itemTextField="fullName" [isMultiple]="false"
                         [(ngModel)]="selectedEvent.student" [ngModelOptions]="{standalone: true}" [items]="students"
                         [canSearch]="true">
                         <ng-template ionicSelectableHeaderTemplate>
@@ -52,7 +85,7 @@
                                         {{ "Select student for the event" | translate }}
                                     </ion-title>
                                     <ion-buttons slot="end">
-                                        <ion-button ion-button (click)="selectStudent.close()">
+                                        <ion-button ion-button (click)="selectEventStudent.close()">
                                             <ion-icon color="danger" name="close"></ion-icon>
                                         </ion-button>
                                     </ion-buttons>
