Parent self registration is not implemented at the moment

--- a/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
+++ b/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
@@ -19,9 +19,9 @@
     <ion-segment-button value="parents">
         <ion-label>{{'Parents'|translate}}</ion-label>
     </ion-segment-button>
-    <ion-segment-button value="requests">
+    <!-- ion-segment-button value="requests">
         <ion-label>{{'Requests'|translate}}</ion-label>
-    </ion-segment-button>
+    </ion-segment-button -->
     <ion-segment-button value="ptm">
         <ion-label>{{'PTM'|translate}}</ion-label>
     </ion-segment-button>
