--- a/src/app/public/print-page/print-page.component.html
+++ b/src/app/public/print-page/print-page.component.html
@@ -21,7 +21,9 @@
 </ion-content>
 <ion-footer>
     <ion-toolbar>
+        @if(instituteName) {
         <ion-title>{{instituteName}}</ion-title>
+        }
         <ion-label slot="end">CRANIX Solutions GmbH</ion-label>
         <img slot="end" src="assets/images/logo/cranix_school.svg" style="height: 32px; width: 32px;">
     </ion-toolbar>
