Fix ticket#3111 neue Benutzer anlegen nicht möglich

--- a/src/app/trusted/register-ptm/register-ptm.component.html
+++ b/src/app/trusted/register-ptm/register-ptm.component.html
@@ -10,4 +10,11 @@
 <ion-content>
     <cranix-ptm-view [id]="id"></cranix-ptm-view>
 </ion-content>
+<ion-footer>
+    <ion-toolbar>
+        <ion-title>{{instituteName}}</ion-title>
+        <ion-label slot="end">CRANIX Solutions GmbH </ion-label>
+        <img slot="end" src="assets/images/logo/cranix_school.svg" style="height: 32px; width: 32px;">
+    </ion-toolbar>
+</ion-footer>
 }
