First step to students id

--- a/src/app/protected/cranix/profile/tabs/my-devices/my-devices.component.html
+++ b/src/app/protected/cranix/profile/tabs/my-devices/my-devices.component.html
@@ -3,7 +3,7 @@
   <ion-toolbar>
     <ion-buttons slot="end">
       <ion-button>
-        <ion-button size="small" (click)="addDevice($event)" matTooltip="{{'Add Device' | translate }}">
+        <ion-button size="small" fill="solid" (click)="addDevice($event)" matTooltip="{{'Add Device' | translate }}">
           <ion-icon slot="icon-only" name="add-circle"></ion-icon>
         </ion-button>
       </ion-button>
